@@ -5,7 +5,9 @@ from __future__ import print_function, absolute_import, division, unicode_litera
 import datetime
 import copy
 
-from typing import Any, Dict, Optional, List  # NOQA
+import sys
+if sys.version_info >= (3, 5, 2):
+    from typing import Any, Dict, Optional, List  # NOQA
 
 
 class TimeStamp(datetime.datetime):
